@@ -1,3 +1,7 @@
+shmuel 2025-09-26 10:38:38+03:00 - build 892
+
+1. LuaFAR: rename actl.Waitkey to actl.WaitKey
+
 MZK 2025-09-11 21:46:54-04:00 - build 891
 
 1. gh-948: Macro API to retrieve menu item extended data: Menu.GetItemExtendedData.
